tests/error/linear_errors/mutable_affine_struct6.err
Error: Copy violation (at $FILE:17:11)
   | 
15 |             break
16 |         a = s.x  # Ok
17 |     return s
   |            ^ Variable `s` cannot be returned ...

Note:
   | 
13 |         if b:
14 |             t = s
   |                 - ... since variable `s` with non-copyable type `MyStruct` was
   |                   already moved here

Guppy compilation failed due to 1 previous error
